--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -45,45 +45,74 @@
   "id": "󠁥󠁮󠁧󠁿Bahasa Indonesia",
   "ar": "󠁥󠁮󠁧󠁿العربيّة",
   "notif_msg": "This is an example of a message that is commonly used for important information to visitors or users. Please click the button beside to close this message.",
-  "saas-landing": {
-    "header_login": "log in",
-    "header_register": "register",
-    "header_language": "language",
-    "header_theme": "Theme mode",
-    "header_dark": "dark",
-    "header_light": "light",
-    "header_feature": "feature",
-    "header_testimonials": "testimonials",
-    "header_pricing": "pricing and plan",
-    "header_faq": "faq",
-    "header_contact": "contact",
-    "banner_title": "Build AAC boards with the power of the AI",
-    "banner_titlestrong": "",
-    "banner_subtitle": "Millions of happy users work better with our integrated Apps.",
-    "banner_watchvideo": "Watch Video",
-    "getstarted": "Get Started",
-    "counter_month": "Month",
-    "counter_free": "Free Trial",
-    "counter_users": "Active Users",
-    "counter_providers": "Providers",
-    "feature_title1": "Act on it-all",
-    "feature_titlestrong1": "in one dashboard",
-    "feature_desc1": "Our audience dashboard shows you pre-built segments like top locations, recent sources of growth, and even customer lifetime value (CLV).",
-    "see_detail": "See Detail",
-    "feature_title2": "Everything you need is a",
-    "feature_titlestrong2": "unique value proposition",
-    "feature_desc2": "With strong technical foundations, has allowed us to leverage business experts to build hundreds of improvements.",
-    "feature_title3": "Accelerating to Intelligent",
-    "feature_titlestrong3": "Enterprise",
-    "feature_desc3": "We empowers your marketing, sales and services teams to collaborate across the entire customer lifecycle for more meaningful, memorable experiences.",
-    "testi_title": "What Our Customers",
-    "testi_titlestrong": "Testimonial",
-    "pricing_title": "Pricing & Plan",
-    "pricing_subtitle": "The best value designed for your workplace, starting at just $24/user/month.",
-    "faq_subtitle": "Have a question? Check out our frequently asked questions to find your answer.",
-    "caption_news": "news",
-    "caption_event": "event",
-    "news_readmore": "read more",
-    "footer_waiting": "What are you waiting for?"
-  }
+  "header_login": "log in",
+  "header_register": "register",
+  "header_language": "language",
+  "header_theme": "Theme mode",
+  "header_dark": "dark",
+  "header_light": "light",
+  "header_feature": "features",
+  "header_testimonials": "testimonials",
+  "header_pricing": "pricing",
+  "header_faq": "faq",
+  "header_contact": "contact",
+  "banner_title": "Build AAC boards with the power of AI",
+  "banner_titlestrong": "",
+  "banner_subtitle": "Designed for therapists, educators, and caregivers. Generate personalized augmentative communication boards instantly with Cboard AI Builder.",
+  "banner_watchvideo": "Watch Video",
+  "getstarted": "Get Started",
+  "counter_month": "Month",
+  "counter_free": "Free Trial",
+  "counter_users": "AAC Symbols",
+  "counter_providers": "Languages",
+  "counter_transactions": "Transactions",
+  "feature_title1": "Instant Core Vocabulary Boards",
+  "feature_titlestrong1": "with AI",
+  "feature_desc1": "Quickly generate AAC core boards using essential, high-frequency vocabulary tailored to each user’s needs. Save time and support more effective communication from the start.",
+  "see_detail": "See Detail",
+  "feature_title2": "AI-Generated Pictograms",
+  "feature_titlestrong2": "for Every Concept",
+  "feature_desc2": "Missing a symbol? No problem. Our AI creates custom pictograms when existing images aren’t available, ensuring full visual support for every word or phrase.",
+  "feature_title3": "Export Directly to the",
+  "feature_titlestrong3": "Cboard App",
+  "feature_desc3": "Move from board creation to communication in one click. Instantly export your custom AAC boards to the Cboard application with full compatibility and no extra setup.",
+  "testi_title": "Testimonials from Our Users",
+  "testi_titlestrong": "",
+  "testi1": "This tool has completely changed how I build AAC boards. What used to take me hours now takes minutes—and the results are even more personalized.",
+  "testi1Name": "Dr. Elena Ruiz",
+  "testi1Title": "Speech-Language Pathologist, Children's Rehab Center",
+  "testi2": "The AI-generated pictograms are a game changer. No more workarounds or missing images—we always have exactly what we need.",
+  "testi2Name": "Mark Jensen",
+  "testi2Title": "Assistive Technology Specialist, Oak Valley School District",
+  "testi3": "As a special educator, I create multiple boards a week. Cboard AI Builder has cut my prep time in half without sacrificing quality.",
+  "testi3Name": "Lisa Chen",
+  "testi3Title": "Special Education Teacher, Maple Grove Elementary",
+  "testi4": "I love the integration with the Cboard app—it’s seamless. I can create and deploy boards in one smooth workflow.",
+  "testi4Name": "Carlos Alvarez",
+  "testi4Title": "Speech Therapist, Inclusive Voices Clinic",
+  "testi5": "Finally, an AAC tool that puts powerful AI into the hands of educators and therapists. It’s intuitive, efficient, and deeply thoughtful.",
+  "testi5Name": "Angela Thompson",
+  "testi5Title": "Director of Assistive Communication, Bright Horizons Foundation",
+  "testi6": "Being able to generate core vocabulary boards so quickly has made a huge impact on my caseload. It’s a brilliant tool.",
+  "testi6Name": "Priya Menon",
+  "testi6Title": "SLP, Early Intervention Services",
+  "testi7": "The user experience is amazing—simple enough for anyone to use, but powerful under the hood. A true innovation in AAC tech.",
+  "testi7Name": "Jordan Lee",
+  "testi7Title": "EdTech Consultant and AAC Advocate",
+  "testi8": "I work in low-resource settings, and this AI tool helps me provide high-quality AAC boards without needing a big team or budget.",
+  "testi8Name": "Nadia García",
+  "testi8Title": "Special Needs Educator, Fundación Conectar",
+  "testi9": "Custom pictogram creation has opened up new possibilities for children with rare conditions or very specific vocabulary needs.",
+  "testi9Name": "Benjamin Walker",
+  "testi9Title": "Speech Pathologist, Neurodiversity Center",
+  "testi10": "The speed and flexibility of this tool are unmatched. I now recommend it to every therapist I train.",
+  "testi10Name": "Dr. Isabelle Fournier",
+  "testi10Title": "AAC Trainer & Clinical Supervisor, VoicePath Institute",
+  "pricing_title": "Pricing Plans",
+  "pricing_subtitle": "The best value designed for your workplace, starting at just $24/user/month.",
+  "faq_subtitle": "Have a question? Check out our frequently asked questions to find your answer.",
+  "caption_news": "news",
+  "caption_event": "event",
+  "news_readmore": "read more",
+  "footer_waiting": "What are you waiting for?"
 }
