--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -109,7 +109,35 @@
   "testi10Name": "Dr. Isabelle Fournier",
   "testi10Title": "AAC Trainer & Clinical Supervisor, VoicePath Institute",
   "pricing_title": "Pricing Plans",
-  "pricing_subtitle": "The best value designed for your workplace, starting at just $24/user/month.",
+  "pricing_subtitle": "The best value designed for your workplace, starting at just $10/user/month.",
+  "pricing_free_title": "Free Trial",
+  "pricing_free_desc": "Try Cbuilder with no commitment",
+  "pricing_free_feature1": "40 credits included (≈4 boards)",
+  "pricing_free_feature2": "AI Core Vocabulary Boards",
+  "pricing_free_feature3": "AI-Generated Pictograms",
+  "pricing_free_feature4": "Manual Export of Boards",
+  "pricing_free_feature5": "No Credit Card Required",
+  "pricing_basic_title": "Basic",
+  "pricing_basic_desc": "For individuals getting started",
+  "pricing_basic_feature1": "150 monthly credits (≈15 boards)",
+  "pricing_basic_feature2": "AI Core Vocabulary Boards",
+  "pricing_basic_feature3": "AI-Generated Pictograms",
+  "pricing_basic_feature4": "Manual Export of Boards",
+  "pricing_basic_feature5": "Email Support",
+  "pricing_standard_title": "Standard",
+  "pricing_standard_desc": "For professionals who need integration and support",
+  "pricing_standard_feature1": "300 monthly credits (≈30 boards)",
+  "pricing_standard_feature2": "All Basic Features",
+  "pricing_standard_feature3": "Premium Cboard App Access ($8 value)",
+  "pricing_standard_feature4": "Seamless Export to Cboard",
+  "pricing_standard_feature5": "Priority Support",
+  "pricing_pro_title": "Pro",
+  "pricing_pro_desc": "For high-volume users and teams",
+  "pricing_pro_feature1": "600 monthly credits (≈60 boards)",
+  "pricing_pro_feature2": "All Standard Features",
+  "pricing_pro_feature3": "Team Collaboration Tools",
+  "pricing_pro_feature4": "Early Access to New Features",
+  "pricing_pro_feature5": "Discounted Extra Credits",
   "faq_subtitle": "Have a question? Check out our frequently asked questions to find your answer.",
   "caption_news": "news",
   "caption_event": "event",
