--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -61,7 +61,7 @@
   "banner_subtitle": "Designed for therapists, educators, and caregivers. Generate personalized augmentative communication boards instantly with Cboard AI Builder.",
   "banner_watchvideo": "Watch Video",
   "getstarted": "Get Started",
-  "counter_month": "Month",
+  "counter_credits": "Credits",
   "counter_free": "Free Trial",
   "counter_users": "AAC Symbols",
   "counter_providers": "Languages",
@@ -139,8 +139,32 @@
   "pricing_pro_feature4": "Early Access to New Features",
   "pricing_pro_feature5": "Discounted Extra Credits",
   "faq_subtitle": "Have a question? Check out our frequently asked questions to find your answer.",
+  "faq_question_01": "What is Cbuilder and how does it work?",
+  "faq_answer_01": "Cbuilder is an AI-powered tool that helps create AAC communication boards. You simply input the board’s dimensions and describe its purpose, and the tool generates relevant vocabulary and pictograms using advanced language and image models.",
+  "faq_question_02": "How many credits does it take to create a board?",
+  "faq_answer_02": "Each board typically consumes around 10 credits. Your monthly plan includes a specific number of credits, and you can purchase additional credits if needed.",
+  "faq_question_03": "What happens if a pictogram doesn’t exist in the database?",
+  "faq_answer_03": "No problem—Cbuilder uses AI to generate custom pictograms when no suitable image is found in the existing database, so you’ll never be left without a visual symbol.",
+  "faq_question_04": "Can I export boards to the Cboard app?",
+  "faq_answer_04": "Yes! If you're on the Standard or Pro plan, you can seamlessly export your boards directly into the premium version of the Cboard application for immediate use.",
+  "faq_question_05": "Is there a free trial available?",
+  "faq_answer_05": "Yes, we offer a free trial that gives you 40 credits—enough to create 4 full boards. No credit card required to get started.",
   "caption_news": "news",
   "caption_event": "event",
   "news_readmore": "read more",
-  "footer_waiting": "What are you waiting for?"
+  "footer_waiting": "What are you waiting for?",
+  "title_home": "Home",
+  "title_blog": "Blog",
+  "title_contact": "Contact",
+  "title_history": "History",
+  "title_privacy": "Privacy Policy",
+  "title_locations": "Locations",
+  "title_team": "Team",
+  "title_pricing": "Pricing",
+  "title_terms": "Terms of Service",
+  "title_faq": "FAQ",
+  "title_help": "Help",
+  "footer_company": "Company",
+  "footer_resources": "Resources",
+  "footer_legal": "Legal"
 }
