--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -124,14 +124,14 @@
   "pricing_basic_feature3": "AI-Generated Pictograms",
   "pricing_basic_feature4": "Manual Export of Boards",
   "pricing_basic_feature5": "Email Support",
-  "pricing_standard_title": "Standard",
+  "pricing_standard_title": "Standard + Cboard",
   "pricing_standard_desc": "For professionals who need integration and support",
   "pricing_standard_feature1": "300 monthly credits (≈30 boards)",
-  "pricing_standard_feature2": "All Basic Features",
-  "pricing_standard_feature3": "Premium Cboard App Access ($8 value)",
+  "pricing_standard_feature2": "Premium Cboard App Access ($8 value)",
+  "pricing_standard_feature3": "All Basic Features",
   "pricing_standard_feature4": "Seamless Export to Cboard",
   "pricing_standard_feature5": "Priority Support",
-  "pricing_pro_title": "Pro",
+  "pricing_pro_title": "Pro + Cboard",
   "pricing_pro_desc": "For high-volume users and teams",
   "pricing_pro_feature1": "600 monthly credits (≈60 boards)",
   "pricing_pro_feature2": "All Standard Features",
