--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,36 +6,6 @@
   "404_subtitle": "You can either stay and chill here, or go back to the beginning.",
   "back": "back to home",
   "error_without_status": "An error occurred on the server",
-  "contact_title": "Free Project Quote",
-  "contact_title2": "Say Hello to Us",
-  "contact_subtitle": "Do you have any questions? Are you ready to reduce cost and create new revenue? Or you simply want to say hi? Drop us a message.",
-  "form_name": "What is your name? *",
-  "form_email": "What it your email? *",
-  "form_phone": "What is your phone number?",
-  "form_company": "What is your company?",
-  "form_message": "Write your message here",
-  "form_terms": "I have read and accept the Terms of",
-  "form_privacy": "Service & Privacy Policy *",
-  "form_send": "Send Message",
-  "login": "login",
-  "login_create": "Create new account",
-  "login_or": "Or login with email",
-  "login_email": "Email",
-  "login_password": "Password",
-  "login_remember": "Remember",
-  "login_forgot": "Forgot Password",
-  "continue": "Continue",
-  "login_title": "Welcome back",
-  "login_subtitle": "Please login to continue",
-  "register": "Register",
-  "register_already": "Already have account?",
-  "register_or": "Or register with email",
-  "register_name": "Name? *",
-  "register_email": "Email? *",
-  "register_password": "Password",
-  "register_confirm": "Confirm Password",
-  "register_title": "Nice to meet you :)",
-  "register_subtitle": "Just register to join with us",
   "accept": "Accept",
   "en": "English",
   "es": "Spanish",
@@ -44,9 +14,7 @@
   "pt": "󠁥󠁮󠁧󠁿Português",
   "id": "󠁥󠁮󠁧󠁿Bahasa Indonesia",
   "ar": "󠁥󠁮󠁧󠁿العربيّة",
-  "notif_msg": "This is an example of a message that is commonly used for important information to visitors or users. Please click the button beside to close this message.",
-  "header_login": "log in",
-  "header_register": "register",
+  "notif_msg": "We use cookies to make our site work. With your consent, we use cookies to improve user experience and analyze website traffic. By clicking “Accept”, you agree to our website's use of cookies.",
   "header_language": "language",
   "header_theme": "Theme mode",
   "header_dark": "dark",
